--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,13 +7,12 @@
   font-size: 22px;
   font-weight: 600;
   padding-left: 20px;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .SectionDescription {
   font-size: 14px;
   padding-left: 20px;
-  padding-bottom: 21px;
   margin-bottom: 10px;
 }
 
@@ -94,20 +93,33 @@
   box-sizing: border-box;
 }
 
-.HeaderContainer {
+.Header {
   display: grid;
-  grid-template-columns: 100px auto 280px;
+  grid-template-columns: 90px auto 90px;
   background-color: #1178CE;
   height: 70px;
   box-sizing: border-box;
 }
 
-.HeaderTitle {
-  margin: 10px 0px;
+.HeaderLeft {
+  margin: 10px 30px;
+  box-sizing: border-box;
+}
+
+.HeaderMiddle {
+  height: 50px;
+  margin: 8px 0px;
   font-size: 20px;
   font-weight: 700;
   text-align: center;
   color: #fff;
+  box-sizing: border-box;
+}
+
+.HeaderRight {
+  text-align: center;
+  margin: 15px 0px 10px;
+  box-sizing: border-box;
 }
 
 .HeaderButton {
@@ -125,27 +137,50 @@
   color: #1178CE;
 }
 
-@media (min-width: 540px) {
-  .HeaderTitle {
-    margin: 10px 0px;
-    font-size: 40px;
-    font-weight: 700;
-    text-align: center;
-    color: #fff;
+.HeaderQuestion {
+  border: 2px solid #fff;
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
+  font-weight: 600;
+  border-radius: 50%;
+  background-color: #1178CE;
+  color: #fff;
+}
+
+.HeaderQuestion:hover {
+  border: 2px solid #1178CE;
+  background-color: #fff;
+  color: #1178CE;
+}
+
+.ErrorText {
+  color: red;
+  font-size: 14px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+}
+
+@media (min-width: 435px) {
+  .HeaderMiddle {
+    margin: 20px 0px;
   }
+
   .SectionTitle {
     font-size: 24px;
-    margin-bottom: 8px;
   }
 
   .SectionDescription {
     font-size: 16px;
-    padding-left: 20px;
-    padding-bottom: 24px;
-    margin-bottom: 16px;
   }}
 
 @media (min-width: 575px) {
+  .HeaderMiddle {
+    margin-top: 15px;
+    font-size: 28px;
+  }
+
   .MainContainer {
     padding-left: calc((100vw - 480px)/2);
     padding-right: calc((100vw - 480px)/2);
@@ -162,15 +197,13 @@
   .CardBody {
     font-size: 16px;
   }
+
+  .ErrorText {
+    font-size: 16px
+  }
 }
 
 @media (min-width: 770px) {
-  .HeaderContainer {
-    display: grid;
-    grid-template-columns: 240px auto 280px;
-    height: 140px;
-  }
-
   .MainContainer {
     padding-left: calc((100vw - 660px)/2);
     padding-right: calc((100vw - 660px)/2);
@@ -181,11 +214,35 @@
   }
 }
 
-@media (min-width: 992px) {
-  .HeaderTitle {
-    margin: 40px 0px;
-    font-size: 40px;
+@media (min-width: 870px) {
+  .Header {
+    display: grid;
+    grid-template-columns: 240px auto 280px;
+    height: 140px;
   }
+
+  .HeaderLeft {
+    margin: 35px;
+  }
+
+  .HeaderMiddle {
+    margin-top: 50px;
+  }
+
+  .HeaderRight {
+    margin: 50px 0px;
+  }
+
+  .QuestionIcon {
+    width: 40px;
+    font-size: 40px;
+    color: lightblue;
+    padding-top: 5px;
+  }
+}
+
+@media (min-width: 992px) {
+  
 
   .MainContainer {
     padding-left: calc((100vw - 900px)/2);
